# Filemesh

./: .gitignore  Cargo.toml  EXAMPLES.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  example.txt
src/: file_transfer.rs  libp2p_peers.rs  main.rs  room.rs
