[package]
name = "filemesh-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Libp2p for P2P networking
libp2p = { version = "0.53", features = [
    "tcp",
    "websocket",
    "dns",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "identify",
    "ping",
    "relay",
    "dcutr",
    "autonat",
    "macros",
    "tokio"
]}

# Async utilities
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-std = "1.12"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File & terminal helpers
indicatif = "0.17"
colored = "2.1"
bytes = "1.5"

# Hashing for file integrity
sha2 = "0.10"
hex = "0.4"

# Error handling
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
